[gd_scene load_steps=2 format=2]

[ext_resource path="res://LevelSelect.gd" type="Script" id=1]

[node name="LevelSelect" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -180.0
margin_right = 320.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = -104.0
margin_right = 58.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" type="Button" parent="VBoxContainer"]
margin_right = 58.0
margin_bottom = 20.0
text = "Level 1"

[node name="Level2" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 58.0
margin_bottom = 44.0
text = "Level 2"

[node name="Level3" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 58.0
margin_bottom = 68.0
text = "Level 3"

[node name="Back" type="Button" parent="VBoxContainer"]
margin_top = 72.0
margin_right = 58.0
margin_bottom = 92.0
text = "Back"

[connection signal="pressed" from="VBoxContainer/Level1" to="." method="_on_Level1_pressed"]
[connection signal="pressed" from="VBoxContainer/Level2" to="." method="_on_Level2_pressed"]
[connection signal="pressed" from="VBoxContainer/Level3" to="." method="_on_Level3_pressed"]
[connection signal="pressed" from="VBoxContainer/Back" to="." method="_on_Back_pressed"]
